...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Stop #1" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="O6F-UQ-Hnj">
                                <rect key="frame" x="16" y="110" width="243" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                </connections>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Stop #2 (optional)" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="DIt-6i-tiJ">
                                <rect key="frame" x="16" y="186" width="243" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4ed-8f-gtq">
                                <rect key="frame" x="118" y="224" width="40" height="30"/>
                                <state key="normal" title="Route"/>
                                <connections>
                                    <segue destination="Wxf-fl-Uba" kind="show" identifier="ShowDirectionViewController" id="71h-PV-w2N"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DHl-0M-THK">
                                <rect key="frame" x="123" y="148" width="30" height="30"/>
                                <state key="normal" title="↑↓"/>
                                <connections>
                                    <action selector="swapButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="nk4-vB-Csr"/>
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Start/End Point" textAlignment="natural" minimumFontSize="17" background="Stop 1" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Bqp-hd-K5I">
                                <rect key="frame" x="16" y="72" width="243" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="azA-gb-pl3">
                                <rect key="frame" x="267" y="110" width="37" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="Destination1Enter"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="40" id="Mkw-nF-bl2"/>
...
                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g0d-wg-i8Y">
                                <rect key="frame" x="267" y="186" width="37" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="Destination2Enter"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="37" id="CLZ-1B-mfI"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Obm-k7-2X2">
                                <rect key="frame" x="267" y="72" width="37" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="StartEndEnter"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="37" id="lKp-IW-hZp"/>
...
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="Trip" id="cil-mf-cn4"/>
                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                    <connections>
...
