...
    cell.textLabel?.numberOfLines = 3
    cell.textLabel?.font = UIFont(name: "Verdana-Regular", size: 11)
    
    if indexPath.row < addresses.count {
      cell.textLabel?.text = addresses[indexPath.row]
    } else {
      cell.textLabel?.text = "None of the above"
    }
    return cell
  }
}
