...
  - Parameter message: Message to be displayed on the AlertView.
   
  */
  func showAlert(message: String) {
    let alert = UIAlertController(title: nil, message: message, preferredStyle: .Alert)
    
    let okButton = UIAlertAction(title: "OK", style: .Cancel) {
      _ in
      self.navigationController?.popViewControllerAnimated(true)
    }
    
    alert.addAction(okButton)
    
...
